# concentration_station

./: .env  .gitignore  Makefile  README.md  pyproject.toml
frontend/: hardhat.config.js  package-lock.json  package.json  vite.config.js
frontend/scripts/: deployUp.js  generateKeys.js  readProfileData.js
frontend/src/: app.html  app.postcss
frontend/src/lib/: consts.js  likedCoins.js  mock.js  stores.js
frontend/src/lib/actions/: fetchProfile.js  getCoinDetails.js  getCoinsList.js  index.js  sign.js  submitBuy.js
frontend/src/lib/components/: Card.svelte  Connect.svelte  Footer.svelte  Profile.svelte  SelectChain.svelte  SelectMode.svelte  TransactionFrame.svelte
frontend/src/lib/modules/: WalletConnect.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/activity/: +page.svelte
frontend/src/routes/liked/: +page.svelte
frontend/src/routes/profile/: +page.svelte
frontend/src/routes/transactions/: +page.svelte
ml/: blink_detector.py  pyproject.toml  script.py  server.py  training.py
scripts/: make_ignore.py
