[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dev-template"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
repository = "https://github.com/valory-xyz/dev-template"
keywords = [ "autonomy", "autonomous", "autonolas", "service", "multi", "agent",]
classifiers = [ "Environment :: Console", "Environment :: Web Environment", "Development Status :: 2 - Pre-Alpha", "Intended Audience :: Developers", "License :: OSI Approved :: Apache Software License", "Natural Language :: English", "Operating System :: MacOS", "Operating System :: Microsoft", "Operating System :: Unix", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Topic :: Communications", "Topic :: Internet", "Topic :: Scientific/Engineering", "Topic :: Software Development", "Topic :: System",]
[[tool.poetry.packages]]
include = "packages"

[tool.poetry.dependencies]
python = "<4.0,>=3.8"
open-autonomy = "==0.13.6"
open-aea-cli-ipfs = "==1.42.0"
open-aea = "==1.42.0"
open-aea-ledger-ethereum = "==1.42.0"

aiohttp = "==3.8.2"
jsonschema = "4.3.0"
openapi-core = "0.14.5"
openapi-spec-validator = "0.2.8"
aioprometheus = ">=20.0.0,<21.0.0"
psutil = ">=5.9.5,<6.0.0"
sqlalchemy = "1.4.36"

toml = "==0.10.2"
tomte = {version = "==0.2.15", extras = ["cli", "tests"]}
