[tool.poetry]
name = "concentration-station"
version = "0.1.0"
description = ""
authors = ["8baller <8ball030@gmail.com>"]
readme = "README.md"
packages = [{include = "concentration_station"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.9.0.80"
dlib = "^19.24.2"
flask = "^3.0.2"
flask-socketio = "^5.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
